--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="1o6Wq53-g3I1ycPHu7JNizDOnlo5IoyBiEuxtm9UbIM" />
     <meta name="yandex-verification" content="32a8c016c0aa8f2b" />
     <title>Главная</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
