--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta name="google-site-verification" content="1o6Wq53-g3I1ycPHu7JNizDOnlo5IoyBiEuxtm9UbIM" />
     <meta name="yandex-verification" content="32a8c016c0aa8f2b" />
+    <meta name="msvalidate.01" content="6123D1A58C821051D12799935E732D03" />
     <title>Главная</title>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
